Fixing the way we pass attributes and parameters to plugins, bug 103940 r=av sr=beard